--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -154,6 +154,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. 双向循环神经网络 Bidirectional RNN\n",
+    "\n",
+    "BRNN和LSTM几乎是NLP问题中的标配。\n",
+    "\n",
+    "缺点：需要完整的序列数据来预测结果，而无法仅使用截止到当前的序列数据。对于实时要求高的系统，复杂度更高。\n",
+    "\n",
+    "![Bidirectional RNN.png](img/Bidirectional RNN.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
