Using Word Embeddings

--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -32,6 +32,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 使用词嵌入 Using Word Embeddings\n",
+    "\n",
+    "以命名实体识别问题为例，只需要将词汇的One-Hot向量替换为特征向量即可。具体步骤：\n",
+    "\n",
+    "1. 从一个非常大（上亿级别）的语料库中，学习词嵌入；（或者下载提前训练好的）\n",
+    "2. 将词嵌入，迁移学习到一个具有相对小训练集（比如10万的词汇）的任务，比如命名实体识别；\n",
+    "3. 可选：用新的数据继续对词嵌入调参\n",
+    "\n",
+    "当训练集的数量相对较小时，使用词嵌入能大幅提高NLP问题的效果，比如命名实体识别、文本摘要（text summarization）、指代消解（co-reference resolution）、句法分析（parsing）。而对于语言模型、机器翻译则帮助不大。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
