Properties of Word Embeddings

--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -47,6 +47,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 词嵌入的特性 Properties of Word Embeddings\n",
+    "\n",
+    "词嵌入还可以用来帮助解决**类比推理 analogy reasoning**问题，Man is to Woman as King is to ? 只需要计算 $e_{man} - e_{woman} \\approx e_{king} - e_{?}$，这个公式可以正规地定义为对cosine相似度求最小值的优化问题。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
