--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -56,6 +56,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 嵌入矩阵 Embedding Matrix\n",
+    "\n",
+    "学习词嵌入，最终就是为了学习 #features × #words 的嵌入矩阵。用 $E$ 表示嵌入矩阵，$o_i$ 表示第 $i$ 个词的One-Hot向量，$e_i$ 表示第 $i$ 个词的嵌入向量，则有 $ E \\cdot o_i = e_i$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
