Learning Word Embeddings

--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -65,6 +65,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 学习词嵌入：Word2vec & GloVe "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 学习词嵌入 Learning Word Embeddings\n",
+    "\n",
+    "略。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
