--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -77,7 +77,18 @@
    "source": [
     "### 2.1 学习词嵌入 Learning Word Embeddings\n",
     "\n",
-    "略。"
+    "[A Neural Probabilistic Language Model](http://www.jmlr.org/papers/volume3/bengio03a/bengio03a.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 2.2 Word2Vec\n",
+    "\n",
+    "[Efficient Estimation of Word Representations in Vector Space](https://arxiv.org/pdf/1301.3781.pdf)"
    ]
   },
   {
