--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -92,6 +92,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Negative Sampling\n",
+    "\n",
+    "[Distributed Representations of Words and Phrases and their Compositionality](https://arxiv.org/pdf/1310.4546.pdf)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
