--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -101,6 +101,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 GloVe word vectors\n",
+    "\n",
+    "[GloVe: Global Vectors for Word Representation](https://www.aclweb.org/anthology/D14-1162)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
