--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -110,6 +110,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 词嵌入的应用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 情感分类 Sentiment Classification\n",
+    "\n",
+    "方法1：将句子每个词的词嵌入向量做平均（或求和），然后喂给Softmax分类器。缺点：没有考虑词的顺序信息。\n",
+    "\n",
+    "方法2：运用每个词的词嵌入向量，喂给RNN，最后输出Softmax。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
