Debiasing Word Embeddings

--- a/Natural Language Processing & Word Embeddings.ipynb
+++ b/Natural Language Processing & Word Embeddings.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. 词嵌入的应用"
+    "## 3. 词嵌入的应用 Applications using Word Embeddings"
    ]
   },
   {
@@ -125,6 +125,16 @@
     "方法1：将句子每个词的词嵌入向量做平均（或求和），然后喂给Softmax分类器。缺点：没有考虑词的顺序信息。\n",
     "\n",
     "方法2：运用每个词的词嵌入向量，喂给RNN，最后输出Softmax。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 词嵌入除偏 Debiasing Word Embeddings\n",
+    "\n",
+    "[Man is to Computer Programmer as Woman is to Homemaker?\n",
+    "Debiasing Word Embeddings](https://arxiv.org/pdf/1607.06520.pdf)"
    ]
   },
   {
