--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -195,6 +195,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 12. 卷积神经网络：一步一步地搭建卷积模型\n",
+    "\n",
+    "这里我们将使用numpy来实现卷积神经网络的卷积层（CONV）和池化层（POOL），前向传播与反向传播。\n",
+    "\n",
+    "**标记**:\n",
+    "- 上标 $[l]$ 表示第 $l^{th}$ 层的对应变量。 \n",
+    "    - 举例: $a^{[4]}$ 是第 $4^{th}$ 层激活层。 $W^{[5]}$ 和 $b^{[5]}$ 是第 $5^{th}$ 层的参数。\n",
+    "\n",
+    "\n",
+    "- 上标 $(i)$ 表示第 $i^{th}$ 个样本的对应变量。 \n",
+    "    - 举例: $x^{(i)}$ 是第 $i^{th}$ 个训练样本的输入。\n",
+    "    \n",
+    "    \n",
+    "- 下标 $i$ 表示向量的第 $i^{th}$ 个元素。\n",
+    "    - 举例: $a^{[l]}_i$ 表示第 $l$ 层的激活值的第 $i^{th}$ 个元素，假定这一层是全连接层（FC）。\n",
+    "    \n",
+    "    \n",
+    "- $n_H$, $n_W$ 和 $n_C$ 分别表示给定层的高度、宽度和通道数。当需要确定地表示是第 $l$ 层时，可以写作\n",
+    "$n_H^{[l]}$, $n_W^{[l]}$, $n_C^{[l]}$。\n",
+    "- $n_{H_{prev}}$, $n_{W_{prev}}$ 和 $n_{C_{prev}}$ 分别表示上一层的高度、宽度和通道数。当需要确定地表示是第 $l$ 层对应的前一层相应参数时，可以写作 $n_H^{[l-1]}$, $n_W^{[l-1]}$, $n_C^{[l-1]}$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.1 三方包\n",
+    "\n",
+    "首先引入在这个编程练习中所需要的包。\n",
+    "- [numpy](www.numpy.org) 是Python生态圈中进行科学计算的基础包。\n",
+    "- [matplotlib](http://matplotlib.org) 是Python生态圈中著名的绘图包。\n",
+    "- np.random.seed(1) 用来保证所有函数调用中随机部分的一致性。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import h5py\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
+    "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
+    "plt.rcParams['image.interpolation'] = 'nearest'\n",
+    "plt.rcParams['image.cmap'] = 'gray'\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "np.random.seed(1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
