Outline of the Assignment

--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -258,6 +258,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 12.2 总览\n",
+    "\n",
+    "我们将会实现卷积神经网络的各个组件：\n",
+    "\n",
+    "- 卷积函数，包括：\n",
+    "    - 零补全 Zero Padding\n",
+    "    - 卷积窗口 Convolve window \n",
+    "    - 前向卷积 Convolution forward\n",
+    "    - 反向卷积 Convolution backward (optional)\n",
+    "- 池化函数，包括:\n",
+    "    - 前向池化 Pooling forward\n",
+    "    - 创建掩码 Create mask \n",
+    "    - 分布值 Distribute value\n",
+    "    - 反向池化 Pooling backward (optional)\n",
+    "\n",
+    "这一节的内容都基于 `numpy` 从头开始实现；而在下一节中，我们会用Tensorflow来实现同样的模型。\n",
+    "\n",
+    "<img src=\"img/model.png\" style=\"width:800px;height:300px;\">\n",
+    "\n",
+    "**注意** 每一个前向传播的函数，都有对应的反向传播的函数。因此，前向传播模块中的每一步，都需要将相应的参数保存到缓存中。这些参数将在反向传播过程中用于计算梯度。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
