Single step of convolution

--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -467,6 +467,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12.3.2 单步卷积\n",
+    "\n",
+    "这节我们需要实现单步卷积，即将过滤器应用在输入的一个给定位置。单步卷积会用来构建一个卷积单元，卷积单元的作用是：\n",
+    "\n",
+    "- 取一个输入立方体\n",
+    "- 将过滤器应用到输入的每个给定位置\n",
+    "- 输出另一个立方体（通常会发生尺寸改变）\n",
+    "\n",
+    "<img src=\"img/Convolution_schematic.gif\" style=\"width:500px;height:300px;\">\n",
+    "<caption><center> <u> <font color='purple'> **Figure 2** </u><font color='purple'>  : **Convolution operation**<br> with a filter of 2x2 and a stride of 1 (stride = amount you move the window each time you slide) </center></caption>\n",
+    "\n",
+    "在计算机视觉应用中，左边矩阵中的每个值都对应着一个像素值。卷积的过程中，这个 3x3 的过滤器依次和原矩阵中对应位置做元素相乘，再求和，然后加上截距项。首先，我们要实现单步卷积，对应着将过滤器和矩阵中一个位置进行计算，并获得唯一实数值的过程。\n",
+    "\n",
+    "之后，我们会使用这个函数，对输入的不同位置进行计算，从而实现完整的卷积过程。\n",
+    "\n",
+    "**练习**: 实现 conv_single_step(). [提示](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.sum.html).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: conv_single_step\n",
+    "\n",
+    "def conv_single_step(a_slice_prev, W, b):\n",
+    "    \"\"\"\n",
+    "    Apply one filter defined by parameters W on a single slice (a_slice_prev) of the output activation \n",
+    "    of the previous layer.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    a_slice_prev -- slice of input data of shape (f, f, n_C_prev)\n",
+    "    W -- Weight parameters contained in a window - matrix of shape (f, f, n_C_prev)\n",
+    "    b -- Bias parameters contained in a window - matrix of shape (1, 1, 1)\n",
+    "    \n",
+    "    Returns:\n",
+    "    Z -- a scalar value, result of convolving the sliding window (W, b) on a slice x of the input data\n",
+    "    \"\"\"\n",
+    "\n",
+    "    ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "    # Element-wise product between a_slice and W. Do not add the bias yet.\n",
+    "    s = a_slice_prev * W\n",
+    "    # Sum over all entries of the volume s.\n",
+    "    Z = np.sum(s)\n",
+    "    # Add bias b to Z. Cast b to a float() so that Z results in a scalar value.\n",
+    "    Z = Z + float(b)\n",
+    "    ### END CODE HERE ###\n",
+    "\n",
+    "    return Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = -6.99908945068\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "a_slice_prev = np.random.randn(4, 4, 3)\n",
+    "W = np.random.randn(4, 4, 3)\n",
+    "b = np.random.randn(1, 1, 1)\n",
+    "\n",
+    "Z = conv_single_step(a_slice_prev, W, b)\n",
+    "print(\"Z =\", Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **Z**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            -6.99908945068\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
