Convolutional Neural Networks - Forward pass

--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -568,6 +568,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12.3.3 卷积神经网络：前向传播\n",
+    "\n",
+    "在前向传播的过程中，我们需要接收多个过滤器，并使用它们对输入进行卷积过程的计算。每个过滤器产生的卷积都会输出一个2D矩阵。将这些矩阵叠加起来，就得到了一个3D的立方体：\n",
+    "\n",
+    "<center>\n",
+    "<video width=\"620\" height=\"440\" src=\"img/conv_kiank.mp4\" type=\"video/mp4\" controls>\n",
+    "</video>\n",
+    "</center>\n",
+    "\n",
+    "**练习**: 实现下面的函数，将一组过滤器 W 应用到输入 A_prev。A_prev 是上一层的激活输出值（包括共 m 个样本），W 表示过滤器/权重，b 表示截距向量，每个过滤器都有自己单独的解决。我们也可以访问超参字典，获取补全量和步长。\n",
+    "\n",
+    "**提示**: \n",
+    "1. 要在矩阵 \"a_prev\" (shape (5,5,3)) 中选取左上角 2×2 的子矩阵，可以使用：\n",
+    "```python\n",
+    "a_slice_prev = a_prev[0:2,0:2,:]\n",
+    "```\n",
+    "在下面定义 `a_slice_prev` 时，定义 `start/end` 索引，在使用上面的方法即可。\n",
+    "2. 要定义 a_slice，首先需要定义其四个角的坐标 `vert_start`, `vert_end`, `horiz_start` 和 `horiz_end`。下面的图展示了如果使用 h, w, f 和 s 来计算这四个坐标。\n",
+    "\n",
+    "<img src=\"img/vert_horiz_kiank.png\" style=\"width:400px;height:300px;\">\n",
+    "<caption><center> <u> <font color='purple'> **Figure 3** </u><font color='purple'>  : **Definition of a slice using vertical and horizontal start/end (with a 2x2 filter)** <br> This figure shows only a single channel.  </center></caption>\n",
+    "\n",
+    "\n",
+    "**提醒**:\n",
+    "输出尺寸和输入尺寸的关系如下：\n",
+    "$$ n_H = \\lfloor \\frac{n_{H_{prev}} - f + 2 \\times pad}{stride} \\rfloor +1 $$\n",
+    "$$ n_W = \\lfloor \\frac{n_{W_{prev}} - f + 2 \\times pad}{stride} \\rfloor +1 $$\n",
+    "$$ n_C = \\text{卷积中使用的过滤器数量}$$\n",
+    "\n",
+    "在这个练习中，我们不考虑向量化，仅简单使用for循环来实现。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: conv_forward\n",
+    "\n",
+    "def conv_forward(A_prev, W, b, hparameters):\n",
+    "    \"\"\"\n",
+    "    Implements the forward propagation for a convolution function\n",
+    "    \n",
+    "    Arguments:\n",
+    "    A_prev -- output activations of the previous layer, numpy array of shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
+    "    W -- Weights, numpy array of shape (f, f, n_C_prev, n_C)\n",
+    "    b -- Biases, numpy array of shape (1, 1, 1, n_C)\n",
+    "    hparameters -- python dictionary containing \"stride\" and \"pad\"\n",
+    "        \n",
+    "    Returns:\n",
+    "    Z -- conv output, numpy array of shape (m, n_H, n_W, n_C)\n",
+    "    cache -- cache of values needed for the conv_backward() function\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    # Retrieve dimensions from A_prev's shape (≈1 line)  \n",
+    "    (m, n_H_prev, n_W_prev, n_C_prev) = A_prev.shape\n",
+    "    \n",
+    "    # Retrieve dimensions from W's shape (≈1 line)\n",
+    "    (f, f, n_C_prev, n_C) = W.shape\n",
+    "    \n",
+    "    # Retrieve information from \"hparameters\" (≈2 lines)\n",
+    "    stride = hparameters[\"stride\"]\n",
+    "    pad = hparameters[\"pad\"]\n",
+    "    \n",
+    "    # Compute the dimensions of the CONV output volume using the formula given above. Hint: use int() to floor. (≈2 lines)\n",
+    "    n_H = int((n_H_prev - f + 2 * pad) / stride) + 1\n",
+    "    n_W = int((n_W_prev - f + 2 * pad) / stride) + 1\n",
+    "    \n",
+    "    # Initialize the output volume Z with zeros. (≈1 line)\n",
+    "    Z = np.zeros((m, n_H, n_W, n_C))\n",
+    "    \n",
+    "    # Create A_prev_pad by padding A_prev\n",
+    "    A_prev_pad = zero_pad(A_prev, pad)\n",
+    "    \n",
+    "    for i in range(m):                               # loop over the batch of training examples\n",
+    "        a_prev_pad = A_prev_pad[i]                              # Select ith training example's padded activation\n",
+    "        for h in range(n_H):                           # loop over vertical axis of the output volume\n",
+    "            for w in range(n_W):                       # loop over horizontal axis of the output volume\n",
+    "                for c in range(n_C):                   # loop over channels (= #filters) of the output volume\n",
+    "                    \n",
+    "                    # Find the corners of the current \"slice\" (≈4 lines)\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start = w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
+    "                    \n",
+    "                    # Use the corners to define the (3D) slice of a_prev_pad (See Hint above the cell). (≈1 line)\n",
+    "                    a_slice_prev = a_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :]\n",
+    "                    \n",
+    "                    # Convolve the (3D) slice with the correct filter W and bias b, to get back one output neuron. (≈1 line)\n",
+    "                    Z[i, h, w, c] = conv_single_step(a_slice_prev, W[:,:,:,c], b[:,:,:,c])\n",
+    "                    \n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    # Making sure your output shape is correct\n",
+    "    assert(Z.shape == (m, n_H, n_W, n_C))\n",
+    "    \n",
+    "    # Save information in \"cache\" for the backprop\n",
+    "    cache = (A_prev, W, b, hparameters)\n",
+    "    \n",
+    "    return Z, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z's mean = 0.0489952035289\n",
+      "Z[3,2,1] = [-0.61490741 -6.7439236  -2.55153897  1.75698377  3.56208902  0.53036437\n",
+      "  5.18531798  8.75898442]\n",
+      "cache_conv[0][1][2][3] = [-0.20075807  0.18656139  0.41005165]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "A_prev = np.random.randn(10,4,4,3)\n",
+    "W = np.random.randn(2,2,3,8)\n",
+    "b = np.random.randn(1,1,1,8)\n",
+    "hparameters = {\"pad\" : 2,\n",
+    "               \"stride\": 2}\n",
+    "\n",
+    "Z, cache_conv = conv_forward(A_prev, W, b, hparameters)\n",
+    "print(\"Z's mean =\", np.mean(Z))\n",
+    "print(\"Z[3,2,1] =\", Z[3,2,1])\n",
+    "print(\"cache_conv[0][1][2][3] =\", cache_conv[0][1][2][3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **Z's mean**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            0.0489952035289\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **Z[3,2,1]**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            [-0.61490741 -6.7439236  -2.55153897  1.75698377  3.56208902  0.53036437\n",
+    "  5.18531798  8.75898442]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **cache_conv[0][1][2][3]**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            [-0.20075807  0.18656139  0.41005165]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "最后，卷积层还包括激活函数，如果我们要添加激活逻辑的话，可以使用下面的代码：\n",
+    "```python\n",
+    "# Convolve the window to get back one output neuron\n",
+    "Z[i, h, w, c] = ...\n",
+    "# Apply activation\n",
+    "A[i, h, w, c] = activation(Z[i, h, w, c])\n",
+    "```\n",
+    "\n",
+    "这里，我们先不需要进行激活操作。\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
