--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -381,7 +381,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3d47cd5860>"
+       "<matplotlib.image.AxesImage at 0x7f5777b2cdd8>"
       ]
      },
      "execution_count": 3,
@@ -392,7 +392,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAUEAAACqCAYAAAAz+v3EAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEtRJREFUeJzt3X2wXHV9x/H3J2AYSEiUBxNLCAoIKY42pGMkk6ZEBQzY\nEv+w9anloVUZhcrUjg9NmTHO2FT/cBQURzEYedBKZYQEJW3iQKVBEiNJIEqCYQATYhIRSGgSK4F8\n+8c5N7Pc7MPZ3d/ds3fP5zWzc8/u/u73fO/u2e89Z8/v/H6KCMzMqmpM2QmYmZXJRdDMKs1F0Mwq\nzUXQzCrNRdDMKs1F0MwqzUXQzFqSdKmk/yk7j5HgImhmRQ1kp2IXQTOrNBfBkkk6VdIzkqbn9/9I\n0m8l/XnZuVn/6GQ7kXSvpEWS1kjaI+kOSa+sef4/JO2Q9Jyk/5Z0Vs1zx0lalv/eauC0Ef0DS+Qi\nWLKIeBz4JHCrpKOBJcCSiLiv3Mysn3SxnfwtcBkwGXgJ+ErNc3eTFbdXA+uA79Q89zVgPzAJ+Hvg\n77r/K/qTfO1wf5B0J3AqcBB4c0QcKDkl60PtbCeS7gUeiIgF+f0/BtYDR8ewD36+h/gsMBHYB/wf\n8IaI2JI//6/AnIgYuCMU7wn2j8XAG4CvuABaE+1uJ9tqln8NjAVOkDRG0uclPSZpN/AE2YmPE4AT\ngSOAp4b97kByEewDksYBXwZuBBbWfm9jNqTD7eTkmuVTgBeA3wEfAP4SeFtEvBJ4LaD89jTw4rDf\nndpt/v3KRbA/XAf8LCI+TPY9zTdKzsf6Uyfbyd9ImibpGOCzwPfzQ+HxwB+A5/Li+m/kXWAi4iDw\nA7JCe3R+wuTS9H9Of3ARLJmki4ELgI/mD30cOFvS+8rLyvpNF9vJLcBNwG/IDoWvzh+/GdgKbAd+\nAfx02O/9A3AssAP4Vn4bSF2dGJH0KuA2st3sJ4G/jog9ddo9Cewh+zL3QETM7HilZlZIfmLklogY\n2AKWQrd7gp8GfhwRZwL3AP/coN1BYG5EnO0CaGb9pNsiOJ9sV5v857satFOCdZnZMJL+V9LzNbeh\n+7MZ0MvcUuv2cPjZiDiu0f2axx8HdpN11rwhIr7Z8UrNzBI6slUDSSvJeo0feojsP8w1dZo3qqiz\nI2KHpBOBlZI2RcSqtrM1M0usZRGMiPMbPSdpl6RJEbFL0mTgtw1i7Mh/Pi3pDmAmULcISvIufEVF\nhEZ6Hd6+qq3eNtayCLawjOy6xC+Q9SNaOrxB3j9pTETszfsjXUDWX6mh559/vsu0Xm7RokUsWLAg\nacwJEyYkjTeSFi9enDTe0qVLmT9/ftKYH/zgB5PGa2b27NlNn9+6dStTp3bfN9hxehOnaKz777+/\n7uPdnqz4AnC+pEeBtwOfB5D0Gkk/zNtMAlZJWg+sBu6KiBVdrtfMLImu9gQj4lngvDqP7wD+Il9+\nApjezXrMzEZKJbqtzJkzp+wUBsqZZ55Zdgp1SZonabOkX0n6VKdxJk6cmCQfx+lNnG5juQha26ZN\nm1Z2CoeRNAb4KvAOslFW3iepo0T77UPuOCMbqxJF0CphJrAlIn6dDzH1PbLO/GZNuQjaoDiJl4+d\n91T+mFlTLoJmVmnd9hM06xfbefnAn1Pyxw6zdevWQ8sTJ05M+t2U9Y89e/awZ89hg1odxkXQBsVa\n4HRJp5CNgfdeoO5Ye6k66Fp/G/4Pbtu2bXXbuQjaQIiIlyRdBawg+5rnxojYVHJaNgq4CNrAiIj/\nBPqzE6P1LZ8YMbNKcxE0s0pzETSzSktSBItcsynpOklbJG2Q5AEVzKwvdF0Ei1yzKelC4LSIeD1w\nBfD1btdrZpZCij3BItdszieb55SIWANMlDQJM7OSpSiCRa7ZHN5me502ZmY95xMjZlZpKTpLF7lm\ncztwcos2hyxatOjQ8pw5czwe4ADavHkzjz76aNlpmCUpgkWu2VwGXAncJukcYHdE7GoUMPWkSNZ/\npk2b9rLBWe+6666uY0q6kWxah10R8aauA1oldH04HBEvAUPXbP4S+F5EbJJ0haQP523uBp6Q9Bjw\nDeCj3a7XrI4lZL0UzApLcu1wvWs2I+Ibw+5flWJdZo1ExKr8iMSsMJ8YMbNKcxE0s0rzUFpWOR5Z\nuho8srRVlfJbQx5ZuhqKjiztw2EbGJK+C/wUOEPSVkmXl52T9T/vCdrAiIj3l52DjT7eEzSzSnMR\nNLNKcxE0s0pzETSzSnMRNLNK89lhs5ItX748SZwJEyYkibN48eIkcZYsWZIkzkjryURLks6VtFvS\nuvx2TYr1mpl1q+s9wZqJlt4O/AZYK2lpRGwe1vS+iLi42/WZmaXUq4mWoMWlTGZmZejVREsAs/I5\nh38k6awE6zU7RNIUSfdI+qWkjZI+VnZONjr06sTIg8DUiNifz0F8J3BGj9Zt1fAi8PGI2CBpPPCg\npBV1vpYxe5meTLQUEXtrlpdL+pqk4yLi2XoBv/jFLx5anjt3LnPnzk2QZlqXXnpp2SkUdt5555Wd\nwmEeeOABVq9enSxeROwEdubLeyVtIjsicRG0pnoy0ZKkSUMTK0maCahRAQRYuHBhgrSsn82aNYtZ\ns2Ydun/ttdcmiy3ptcB0YE2yoDawui6CEfGSpKGJlsYANw5NtJQ9HTcA75b0EeAA8HvgPd2u16ye\n/FD4duDq2iMQs0Z6MtFSRFwPXJ9iXWaNSDqSrADeEhFLG7XzyNLV4JGlrYq+BTwSEU2PrT2ydDV4\nZGmrFEmzgQ8Ab5O0Pr8yaV7ZeVn/856gDYSIuB84ouw8bPTxnqCZVZqLoJlVmougmVWai6CZVZqL\noJlVms8Om5Xs2GOPTRIn1fXsqa41r9TI0mZmo5WLoJlVmougmVWai6CZVVqq2eZulLRL0sNN2lwn\naUs+xP70FOs1GyLpKElr8uuGN0r6TNk52eiQak9wCfCORk/mQ+qfFhGvB64Avp5ovWYARMQfgLdG\nxNlkA6pemA/ga9ZUkiIYEauA55o0mQ/cnLddA0yUNCnFus2GRMT+fPEosu5fUWI6Nkr06jvB4TPS\nbaf+jHRmHZM0RtJ6srlGVkbE2rJzsv7Xl52la+cY6deJlqw7qSdaAoiIg8DZkiYAd0o6KyIeGd7O\nI0tXQ7+NLL0dOLnm/mEz0tXyREuDbyQnWoqI5yXdC8wDDiuCHlm6GsoYWVr5rZ5lwCUAks4Bdg/N\nPmeWgqQTJE3Ml48GzsfTbVoBSfYEJX0XmAscL2kr8BlgLPlscxFxt6SLJD0G7AMuT7FesxqvAW6S\nNIbsn/ttEXF3yTnZKJBqtrn3F2hzVYp1mdUTERuBGWXnYaOPrxgxs0pzETSzSnMRNLNKcxE0s0rr\ny87SZlUyefLkJHFuvfXWJHHmzUszZ/3xxx+fJM5I856gmVWai6CZVZqLoJlVmougmVWai6ANlHw4\nrXWSlpWdi40OLoI2aK6mzsgxZo24CNrAkDQFuAhYXHYuNnr0ZKIlSedK2p0fpqyTdE2K9ZoN8yXg\nE3hYfWtDTyZayt0XETPy2+cSrdcMAEnvBHZFxAaaj21p9jKphtJaJemUFs28UdpImg1cLOki4Gjg\nWEk3R8Qlwxt6eP1q6Lfh9QFmSdpANqz+J+rN/WDWqYhYACyA7OsX4J/qFUDw8PpVUXR4/V4VwQeB\nqRGxP5+D+E7gjEaNU11LOZJSXafZC6muBTUbRD0pghGxt2Z5uaSvSTouIp6t137v3kPNGTt2LGPH\nju1BltZL+/btY//+/a0bdiAifgL8ZESC28BJWQQbfhktadLQxEqSZgJqVAABxo8fnzAt60fjxo1j\n3Lhxh+4/88wzJWZjVdaTiZaAd0v6CHAA+D3wnhTrNTPrVk8mWoqI64HrU6zLzCwlXzFiZpXmkaXN\nSnb66acnibNw4cIkcUbLiNCpeE/QzCrNRdDMKs1F0MwqzUXQzCrNJ0ZsYEh6EtgDHAQORMTMcjOy\n0cBF0AbJQWBuRDxXdiI2evhw2AaJ8DZtbfIGY4MkgJWS1kr6UNnJ2Ojgw2EbJLMjYoekE8mK4aaI\nWFV2UtbfXARtYETEjvzn05LuAGYChxVBjyxdDT0bWTqf4etmYBLZF9PfjIjr6rS7DrgQ2Adcls8F\nYZaEpGOAMRGxV9I44ALgs/XaemTpaujlyNIvAh+PiA2SxgMPSloREZuHGuSjSZ8WEa+X9Bbg68A5\nCdZtNmQScIekINuuvxMRK0rOyUaBrotgROwEdubLeyVtAk4CNtc0m0+2t0hErJE0sXagVbNuRcQT\nwPSy87DRJ+nZYUmvJdsQ1wx76iSgdl90e/6YmVmpkhXB/FD4duDq2jlFzMz6Warh9Y8kK4C3RMTS\nOk22AyfX3J+SP1aXJ1oafCM50ZJZO1J1kfkW8EhEXNvg+WXAlcBtks4Bdjf7PtATLQ0+T7Rk/SJF\nF5nZwAeAjZLWk/XaXwCcQj7RUkTcLekiSY+RdZG5vNv1mpmlkOLs8P3AEQXaXdXtuszMUvO1w2ZW\naS6CZlZpLoJmVmkugjYw8iuRvi9pk6Rf5pdomjXlUWRskFwL3B0Rf5X3XT2m7ISs/7kI2kCQNAGY\nExGXAUTEi8DzpSZlo4IPh21QvA74naQlktZJukHS0WUnZf3PRdAGxZHADOD6iJgB7Ac+XW5KNhr4\ncNgGxVPAtoj4eX7/duBT9Rp6ZOlq6NnI0mb9ICJ2Sdom6YyI+BXwduCRem09snQ19HJkabN+8THg\nO5JeATyOr1G3AlwEbWBExEPAm8vOw0aXrk+MSJoi6Z68c+pGSR+r0+ZcSbvzs3brJF3T7XrNzFJI\ncXZ4aKKlNwCzgCslTavT7r6ImJHfPpdgvYW98MILyWM+9NBDlY25b9++5DH7SZEv0x2nf+J0G6vr\nIhgRO4emz8yH1R+aaGk4dbuuTrkIpjXoI0L324fccUY2Vq8mWgKYJWmDpB9JOivles3MOpXsxEiL\niZYeBKZGxP58DuI7gTNSrdvMrFOKiO6DZBer/xBY3mSekdr2TwB/GhHP1nmu+4RsVIqIEf/KxNtX\ntdXbxnoy0VLtROuSZpIV38MKYKMkzVLx9mXD9WSiJeDdkj4CHAB+D7yn2/WamaWQ5HDYzGy0KnUU\nGUmvkrRC0qOS/ktS3SvZJT0p6SFJ6yX9rEGbeZI2S/qVpLoXzku6TtKW/Cz19AL5NY3ZSSdwSTdK\n2iXp4SZt2s2zacwO82zZCb7dXPu9Y32RbahgnJbvccE4hd6DAnGOkrQm//xslPSZLvMak783y7qI\n0fIzXTBO96OJR0RpN+ALwCfz5U8Bn2/Q7nHgVU3ijAEeIzsEfwWwAZg2rM2FwI/y5bcAq1vkViTm\nucCyNv/mPyPrRvRwg+fbyrNgzE7ynAxMz5fHA48meE2LxGw710TbYsv3O9V7nPI9aCPWMfnPI4DV\nwMwu8vpH4NZu3qdWn+k24nwbuDxfPhKY0G6MsscTnA/clC/fBLyrQTvRfK91JrAlIn4dEQeA7+Wx\nh6/rZoCIWANMlDSpy5hDuRUWEauA55o0aTfPIjE7ybNIJ/i2ci0Ys+1cEyn6frdU8P0oEqfo61Uk\n1lAP96PIikVH34NJmgJcBCzu5PdrQ9HlkWjNaOJLIBtNPCLaHk287CL46sjPGkfETuDVDdoFsFLS\nWkkfqvP8SUDtODlPcfjGMrzN9jpt2o0J6TuBt5tnUR3n2aQTfMe59mHH+qLvdylavF5Ffn9MfuJy\nJ7AyItZ2mMqXgE/QYRGt0eozXUSS0cRHfBQZSSuB2r0Dkb0A9b7rafTCzo6IHZJOJHvhNuX/bcs2\nWjqBd5ynmneC70iLmKPlNe2ZFO9BRBwEzs73nu6UdFZE1B1vsUke7wR2RcQGSXPpbo89xWd6aDTx\nKyPi55K+TDaaeFvfeY74nmBEnB8Rb6q5vTH/uQzYNXT4JGky8NsGMXbkP58G7iA7dKm1HagdKXNK\n/tjwNie3aNNWzIjYO3SYERHLgVdIOq5JzCLazbOlTvNU1gn+duCWiFiaItdWMUfoNS2iyDbUcwXe\ng7bkh4v3AvM6+PXZwMWSHgf+HXirpJs7zKPVZ7qIeqOJz2g3SNmHw8uAy/LlS4HD3mRJx+T/CZE0\nDrgA+MWwZmuB0yWdImks8N489vB1XZLHOQfYPXQo3kDLmLXff6lFJ/DhfxaN/4u2m2fLmF3k2bQT\nfIe5tuxY32Gu3SqyDbWj2XvcjlbvQetEpBOU97zIDxfPBza3GyciFkTE1Ig4lez1uSciLukgnyKf\n6SL57AK2SRo6Umg4mnirQKXdgOOAH5Od9VoBvDJ//DXAD/Pl15GdqVsPbAQ+3SDWvDzOlqE2wBXA\nh2vafJXsDOBDwIwC+TWNCVxJ9uatB34KvKVAzO8CvwH+AGwlG/242zybxuwwz9nASzWv/br89eg4\n1yIxO8k14fZ42PvdYZzD3o8O49R9vTqI88b8dzcADwP/kuC16vgsftHPdMFYf0L2D2wD8ANgYrsx\n3FnazCqt7MNhM7NSuQiaWaW5CJpZpbkImlmluQiaWaW5CJpZpbkImlmluQiaWaX9P0BfssqyjIfe\nAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f3d8cc26898>"
+       "<matplotlib.figure.Figure at 0x7f577a921048>"
       ]
      },
      "metadata": {},
@@ -949,6 +949,207 @@
    "metadata": {},
    "source": [
     "到这里，我们就实现了卷积神经网络前向传播过程的所有层。接下来，我们会处理反向传播。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 12.5 卷积神经网络中的反向传播\n",
+    "\n",
+    "在现代深度学习框架中，我们通常只需要实现前向传播，框架会自行处理反向传播的过程，所以大部分深度学习工程师都不需要了解反向传播的详细机制。卷积神经网络的反向传播过程尤其复杂。这一节会简要介绍卷积神经网络的反向传播过程。\n",
+    "\n",
+    "之前在实现简单（全连接）的神经网络时，反向传播是根据成本函数来计算偏导，从而更新参数。卷积神经网络也是类似的，只不过卷积神经网络的反向传播公式更难推导，这里我们会简要地展示在下面。\n",
+    "\n",
+    "#### 12.5.1 卷积层的反向传播\n",
+    "\n",
+    "首先实现卷积层的反向传播\n",
+    "\n",
+    "##### 12.5.1.1 计算 dA:\n",
+    "下面是给定一个训练样本，对于某个特定的过滤器 $W_c$，计算 $dA$ 的公式：\n",
+    "\n",
+    "$$ dA += \\sum _{h=0} ^{n_H} \\sum_{w=0} ^{n_W} W_c \\times dZ_{hw} \\tag{1}$$\n",
+    "\n",
+    "其中$W_c$ 是过滤器， $dZ_{hw}$ 是一个标量，表示成本函数针对卷积层输入 Z 在第 h 行，w 列的梯度。每次，我们都用同样的过滤器 $W_c$ 乘以不同的 dZ，来更新dA。这主要是因为，在前向传播过程中，每次过滤器都是点乘一个区间再求和。而计算 dA 的过程中，我们将这个区间内的梯度相加。\n",
+    "\n",
+    "上面的公式，转换为相应for循环内的代码：\n",
+    "```python\n",
+    "da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] += W[:,:,:,c] * dZ[i, h, w, c]\n",
+    "```\n",
+    "\n",
+    "##### 12.5.1.2 计算 dW:\n",
+    "下面是计算 $dW_c$ 的公式（$dW_c$ 是过滤器的梯度）：\n",
+    "\n",
+    "$$ dW_c  += \\sum _{h=0} ^{n_H} \\sum_{w=0} ^ {n_W} a_{slice} \\times dZ_{hw}  \\tag{2}$$\n",
+    "\n",
+    "其中 $a_{slice}$ 表示用来生成激活值 $Z_{ij}$ 的区间。因此，这里最终给了我们针对这个区间计算 $W$ 的梯度的公式。由于是同一个 $W$，全部相加就得到了 $dW$。\n",
+    "\n",
+    "Where $a_{slice}$ corresponds to the slice which was used to generate the acitivation $Z_{ij}$. Hence, this ends up giving us the gradient for $W$ with respect to that slice. Since it is the same $W$, we will just add up all such gradients to get $dW$. \n",
+    "\n",
+    "上面的公式，转换为相应for循环内的代码：\n",
+    "```python\n",
+    "dW[:,:,:,c] += a_slice * dZ[i, h, w, c]\n",
+    "```\n",
+    "\n",
+    "##### 12.5.1.3 计算 db:\n",
+    "下面是针对过滤器 $W_c$ 对成本函数计算 $db$ 的公式：\n",
+    "\n",
+    "$$ db = \\sum_h \\sum_w dZ_{hw} \\tag{3}$$\n",
+    "\n",
+    "和普通神经网络一样，db 是通过对 $dZ$ 求和来计算的。在卷积的情况下，我们对计算输入 Z 的所有卷积求和。\n",
+    "\n",
+    "上面的公式，转换为相应for循环内的代码：\n",
+    "```python\n",
+    "db[:,:,:,c] += dZ[i, h, w, c]\n",
+    "```\n",
+    "\n",
+    "**练习**: 实现下面的 `conv_backward` 函数。这里需要对所有训练样本、过滤器、高度和宽度求和。请使用上面的公式1,2,3。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def conv_backward(dZ, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for a convolution function\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dZ -- gradient of the cost with respect to the output of the conv layer (Z), numpy array of shape (m, n_H, n_W, n_C)\n",
+    "    cache -- cache of values needed for the conv_backward(), output of conv_forward()\n",
+    "    \n",
+    "    Returns:\n",
+    "    dA_prev -- gradient of the cost with respect to the input of the conv layer (A_prev),\n",
+    "               numpy array of shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
+    "    dW -- gradient of the cost with respect to the weights of the conv layer (W)\n",
+    "          numpy array of shape (f, f, n_C_prev, n_C)\n",
+    "    db -- gradient of the cost with respect to the biases of the conv layer (b)\n",
+    "          numpy array of shape (1, 1, 1, n_C)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    # Retrieve information from \"cache\"\n",
+    "    (A_prev, W, b, hparameters) = cache\n",
+    "    \n",
+    "    # Retrieve dimensions from A_prev's shape\n",
+    "    (m, n_H_prev, n_W_prev, n_C_prev) = A_prev.shape\n",
+    "    \n",
+    "    # Retrieve dimensions from W's shape\n",
+    "    (f, f, n_C_prev, n_C) = W.shape\n",
+    "    \n",
+    "    # Retrieve information from \"hparameters\"\n",
+    "    stride = hparameters[\"stride\"]\n",
+    "    pad = hparameters[\"pad\"]\n",
+    "    \n",
+    "    # Retrieve dimensions from dZ's shape\n",
+    "    (m, n_H, n_W, n_C) = dZ.shape\n",
+    "    \n",
+    "    # Initialize dA_prev, dW, db with the correct shapes\n",
+    "    dA_prev = np.zeros((m, n_H_prev, n_W_prev, n_C_prev))                           \n",
+    "    dW = np.zeros((f, f, n_C_prev, n_C))\n",
+    "    db = np.zeros((1, 1, 1, n_C))\n",
+    "\n",
+    "    # Pad A_prev and dA_prev\n",
+    "    A_prev_pad = zero_pad(A_prev, pad)\n",
+    "    dA_prev_pad = zero_pad(dA_prev, pad)\n",
+    "    \n",
+    "    for i in range(m):                       # loop over the training examples\n",
+    "        \n",
+    "        # select ith training example from A_prev_pad and dA_prev_pad\n",
+    "        a_prev_pad = A_prev_pad[i]\n",
+    "        da_prev_pad = dA_prev_pad[i]\n",
+    "        \n",
+    "        for h in range(n_H):                   # loop over vertical axis of the output volume\n",
+    "            for w in range(n_W):               # loop over horizontal axis of the output volume\n",
+    "                for c in range(n_C):           # loop over the channels of the output volume\n",
+    "                    \n",
+    "                    # Find the corners of the current \"slice\"\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start = w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
+    "                    \n",
+    "                    # Use the corners to define the slice from a_prev_pad\n",
+    "                    a_slice = a_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :]\n",
+    "\n",
+    "                    # Update gradients for the window and the filter's parameters using the code formulas given above\n",
+    "                    da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] += W[:,:,:,c] * dZ[i, h, w, c]\n",
+    "                    dW[:,:,:,c] += a_slice * dZ[i, h, w, c]\n",
+    "                    db[:,:,:,c] += dZ[i, h, w, c]\n",
+    "                    \n",
+    "        # Set the ith training example's dA_prev to the unpaded da_prev_pad (Hint: use X[pad:-pad, pad:-pad, :])\n",
+    "        dA_prev[i, :, :, :] = da_prev_pad[pad:-pad, pad:-pad, :]\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    # Making sure your output shape is correct\n",
+    "    assert(dA_prev.shape == (m, n_H_prev, n_W_prev, n_C_prev))\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA_mean = 1.45243777754\n",
+      "dW_mean = 1.72699145831\n",
+      "db_mean = 7.83923256462\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "dA, dW, db = conv_backward(Z, cache_conv)\n",
+    "print(\"dA_mean =\", np.mean(dA))\n",
+    "print(\"dW_mean =\", np.mean(dW))\n",
+    "print(\"db_mean =\", np.mean(db))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** 预期输出: **\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **dA_mean**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            1.45243777754\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **dW_mean**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            1.72699145831\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **db_mean**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            7.83923256462\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>\n"
    ]
   },
   {
